--- a/src/components/MessageTemplateEditor/MessageTemplateEditor.module.scss
+++ b/src/components/MessageTemplateEditor/MessageTemplateEditor.module.scss
@@ -1,6 +1,9 @@
+@import './../../variables';
+
 .MessageTemplateEditor {
     width: auto;
     padding: 1.5rem;
+    animation: fadeIn .5s;
 }
 h1 {
     margin: auto;
@@ -19,8 +22,7 @@ h1 {
     button {
         width: fit-content;
         height: fit-content;
-        color: #fff;
-        background-color: #303040;
+        background-color: $secondary-color;
         padding: .5rem 1.5rem;
         margin: 0 1vw;
     }
@@ -34,7 +36,7 @@ h1 {
         margin: 0 .25rem;
         border-radius: 6px;
         font-size: 16px;
-        background-color: rgb(125, 150, 0);
+        background-color: $accent-color;
     }
     padding: 1vh;
     margin-bottom: 1.5rem;
@@ -49,13 +51,13 @@ h1 {
     }
     p {
         display: inline;
-        background-color: rgb(125, 150, 0);
+        background-color: $accent-color;
         padding: 3px 5px;
         margin: auto;
         border-radius: 6px;
         font-size: 16px;
         font-weight: bold;
-        color: #fff;
+        color: white;
     }
     textarea {
         float: right;
@@ -77,9 +79,62 @@ h1 {
 }
 .darken {
     position: fixed;
+    z-index: 1;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(3px);
+}
+.popup {
+    position: fixed;
+    padding: 20px;
+    width: 400px;
+    top: 90%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    border-radius: 13px;
+    background-color: $secondary-transparent;
+    backdrop-filter: blur(3px);
+    box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.3);
+    animation: slideIn .5s cubic-bezier(.11,1.7,.4,.81),
+               fadeOut .5s ease-in 2.6s;
+  }  
+  @keyframes slideIn {
+    from {
+        transform: translate(-50%, 200%);
+    }
+    to {
+        transform: translate(-50%, 0);
+    }
+  }
+  @keyframes fadeOut {
+    from {
+        transform: translate(-50%, 0);
+    }
+    to {
+        transform: translate(-50%, 2000%);
+    }
+  }
+.Header {
+    position: absolute;
+    z-index: -1;
+    right: 30px;
+    width: 800px;
+    padding: 0;
+    text-align: end;
+    font-size: 170px;
+    font-family: $font;
+    font-weight: 500;
+}
+ @keyframes fadeIn {
+    from {
+        visibility: hidden;
+        opacity: 0;
+    }
+    to {
+        visibility: visible;
+        opacity: 1;
+    }
 }
