--- a/src/components/PreviewScreen/PreviewScreen.module.scss
+++ b/src/components/PreviewScreen/PreviewScreen.module.scss
@@ -1,3 +1,5 @@
+@import './../../variables';
+
 .PreviewScreen {
     pointer-events: auto;
     width: 600px;
@@ -7,16 +9,15 @@
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 13px;
+    background-color: #e6e6ea;
     display: grid;
     grid-template-rows: max-content;
     grid-gap: 0;
-    background-color: #fff;
     box-shadow: 0 0 15px black;
     button {
         width: fit-content;
         height: fit-content;
-        color: #fff;
-        background-color: #303040;
+        background-color: $secondary-color;
         padding: .5rem 1.5rem;
         align-self: end;
         margin:  0 1.5rem 1.5rem 1.5rem;
@@ -28,6 +29,9 @@
         margin: 1.5rem;
         justify-self: center;
         outline: none;
+        &:focus {
+            background-color: $primary-transparent;
+        }
     }
     .var_container {
         height: fit-content;
@@ -43,14 +47,26 @@
             box-sizing: border-box;
             width: 100%;
             margin-bottom: 0;
+            padding-top: 21px;
         }
         label {
             left: .5rem;
-            top: .5rem;
+            top: 1.5rem;
+            font-weight: bold;
+            font-size: 12px;
+            z-index: 1;
+            background-color: transparent;
             padding: 0px 5px;
-            background-color: #fff;
-            color: black;
             position: relative;
         }
 }
+}
+.Header {
+    margin: 1.5rem 1.5rem 0 1.5rem;
+    padding: 0;
+    text-align: end;
+    font-size: 18px;
+    // width: 100px;
+    justify-self: end;
+    font-weight: 300;
 }
