--- a/src/components/StartScreen/StartScreen.module.scss
+++ b/src/components/StartScreen/StartScreen.module.scss
@@ -1,3 +1,5 @@
+@import './../../variables';
+
 .StartScreen {
     position: absolute;
     top: 50%;
@@ -6,7 +8,6 @@
     button {
         width: 250px;
         height: 50px;
-        color: #fff;
-        background-color: #303040;
+        background-color: $secondary-color;
     }
 }
