--- a/src/components/VarSelector/VarSelector.module.scss
+++ b/src/components/VarSelector/VarSelector.module.scss
@@ -1,3 +1,5 @@
+@import './../../variables';
+
 .VarSelector {
     width: 100%;
     padding-bottom: 1.5rem;
@@ -5,10 +7,10 @@
         margin-right: 10px;
         width: fit-content;
         height: fit-content;
-        padding-bottom: 3px;
-        background-color: rgba(160, 190, 0, 1); 
+        padding: .25rem 1rem;
+        background-color: $secondary-color; 
         &:hover {
-            background-color: rgb(150, 180, 0);
+            background-color: $accent-color;
         }
 
     }
