Corrected margins @MessagePreview
+fixed padding for if-then-else button
+fixed bottom buttons width to 120px

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,7 +1,10 @@
+// $primary-color: #fff;
+// $primary-transparent: rgba(255, 255, 255, 0.2);
 $primary-color: #60b2a0;
-$secondary-color: #e5d2d6;
-$accent-color: #c59ba4;
-$secondary-transparent: rgba(229, 210, 214, 0.5);
 $primary-transparent: rgba(96, 178, 160, 0.2);
+$secondary-color: #e5d2d6;
+$secondary-transparent: rgba(229, 210, 214, 0.5);
+$accent-color: #c59ba4;
+
 $font:'Roboto';
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
