--- a/src/App.scss
+++ b/src/App.scss
@@ -32,6 +32,7 @@ button {
   color: black;
   background-color: $secondary-color;
   box-shadow: 0px 0px 3px rgba(0, 0, 0, .4);
+  user-select: none;
   &:active {
       box-shadow: 0px 0px 6px rgba(0, 0, 0, .6);
   }
