--- a/src/components/PreviewScreen/PreviewScreen.module.scss
+++ b/src/components/PreviewScreen/PreviewScreen.module.scss
@@ -15,7 +15,7 @@
     grid-gap: 0;
     box-shadow: 0 0 15px black;
     button {
-        width: fit-content;
+        width: 120px;
         height: fit-content;
         background-color: $secondary-color;
         padding: .5rem 1.5rem;
@@ -37,27 +37,30 @@
         height: fit-content;
         display: flex;
         flex-wrap: wrap;
+        margin-left: 1.5rem;
         div {
             display: block;
-            box-sizing: border-box;
-            width: calc(50% - 3rem);
-            margin: 0 1.5rem 1.5rem 1.5rem;
+            width: calc(50% - 1.5rem);
+            height: auto;
+            margin: 0 1.5rem 1.5rem 0;
         }
         .var {
             box-sizing: border-box;
             width: 100%;
             margin-bottom: 0;
-            padding-top: 21px;
+            padding-top: 25px;
         }
         label {
             left: .5rem;
-            top: 1.5rem;
+            top: .5rem;
             font-weight: bold;
             font-size: 12px;
             z-index: 1;
             background-color: transparent;
             padding: 0px 5px;
             position: relative;
+            display: block;
+            height: 0;
         }
 }
 }
@@ -66,7 +69,5 @@
     padding: 0;
     text-align: end;
     font-size: 18px;
-    // width: 100px;
-    justify-self: end;
     font-weight: 300;
 }
