fixes and rearrangement
+tidied up the code
+fixed autosizing in message_preview  textarea
+added overflow to PreviewScreen widget
+fixed favicon display in Firefox

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,7 @@ body {
 }
 textarea {
   font-size: 12px;
+  line-height: 18px;
   font-family: monospace;
   border: 1px solid $primary-color;
   background-color: $primary-transparent;
