--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,7 +1,7 @@
-// $primary-color: #fff;
-// $primary-transparent: rgba(255, 255, 255, 0.2);
-$primary-color: #60b2a0;
-$primary-transparent: rgba(96, 178, 160, 0.2);
+$primary-color: #fff;
+$primary-transparent: rgba(255, 255, 255, 0.2);
+// $primary-color: #60b2a0;
+// $primary-transparent: rgba(96, 178, 160, 0.2);
 $secondary-color: #e5d2d6;
 $secondary-transparent: rgba(229, 210, 214, 0.5);
 $accent-color: #c59ba4;
