--- a/src/components/PreviewScreen/PreviewScreen.module.scss
+++ b/src/components/PreviewScreen/PreviewScreen.module.scss
@@ -3,7 +3,8 @@
 .PreviewScreen {
     pointer-events: auto;
     width: 600px;
-    min-height: auto;
+    max-height: 97vh;
+    overflow-y: auto;
     position: fixed;
     top: 50%;
     left: 50%;
