--- a/src/components/VarSelector/VarSelector.module.scss
+++ b/src/components/VarSelector/VarSelector.module.scss
@@ -4,15 +4,11 @@
     width: 100%;
     padding-bottom: 1.5rem;
     button {
-        margin-right: 10px;
+        margin-right: 1.5rem;
         width: fit-content;
         height: fit-content;
-        padding: .25rem 1rem;
-        background-color: $secondary-color; 
-        &:hover {
-            background-color: $accent-color;
-        }
-
+        padding: .25rem .75rem;
+        background-color: $secondary-color;
     }
 
 }
