--- a/src/components/MessageTemplateEditor/MessageTemplateEditor.module.css
+++ b/src/components/MessageTemplateEditor/MessageTemplateEditor.module.css
@@ -1,6 +1,6 @@
 .MessageTemplateEditor {
-  width: auto;
-  padding: 1.5rem;
+  width: 60%;
+  margin: 0 auto;
   animation: fadeIn 0.5s;
 }
 .MessageTemplateEditor .defaultTextarea {
@@ -8,17 +8,10 @@
   box-sizing: border-box;
 }
 
-h1 {
-  margin: auto;
-  text-align: center;
-  font-size: 1rem;
-  font-weight: bolder;
-  padding-bottom: 1rem;
-}
-
 .templateSubmit {
   display: flex;
   justify-content: center;
+  margin-bottom: 1.5rem;
 }
 .templateSubmit button {
   width: fit-content;
@@ -31,7 +24,6 @@ h1 {
 
 .addIfelse {
   padding: 0.5rem;
-  margin-bottom: 1.5rem;
 }
 .addIfelse span {
   width: max-content;
@@ -57,11 +49,11 @@ h1 {
   display: inline;
   background-color: #c59ba4;
   padding: 3px 5px;
-  margin: auto;
   border-radius: 6px;
   font-size: 16px;
   font-weight: bold;
   color: white;
+  user-select: none;
 }
 .if_then_else textarea {
   float: right;
@@ -84,7 +76,7 @@ h1 {
 
 .darken {
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   top: 0;
   left: 0;
   width: 100%;
@@ -124,19 +116,12 @@ h1 {
   }
 }
 .Header {
-  position: absolute;
-  z-index: -1;
-  letter-spacing: -3.4px;
-  right: 30px;
-  top: 6px;
-  width: 800px;
-  padding: 0;
   text-align: end;
-  font-size: 170px;
+  font-size: 32px;
   font-family: "Roboto";
-  font-weight: 500;
-  line-height: 204px;
+  font-weight: 300;
   user-select: none;
+  margin: auto;
 }
 
 @keyframes fadeIn {
@@ -148,4 +133,13 @@ h1 {
     visibility: visible;
     opacity: 1;
   }
+}
+
+.actionMenu {
+  position: sticky;
+  top: 0;
+  left: 0;
+  padding: 1.5rem 0;
+  z-index: 1;
+  background-color: #e6e6ea;
 }
